Parse "miningbeneficiary" config in *bft transitions
Signed-off-by: Meredith Baxter <meredith.baxter@palm.io>